--- a/templates/base.html
+++ b/templates/base.html
@@ -52,6 +52,12 @@
             <li class="nav-item">
                 <a class="nav-link text-white" href="/seasons">Seasons</a>
             </li>
+                <li class="nav-item">
+                <a class="nav-link text-white" href="/extra">Extras</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-white" href="/about">About</a>
+            </li>
             <li class="nav-item">
                 <form class="form-inline my-2 my-lg-0 position-relative" action="/search" method="get">
                     <input class="form-control mr-sm-2" type="search" placeholder="Search episodes by title"
