--- a/templates/extra.html
+++ b/templates/extra.html
@@ -19,7 +19,7 @@
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="{{ game_id }}DetailsModalLabel">Game Details: {{ game_name }}</h5>
+                            <h5 class="modal-title" id="{{ game_id }}DetailsModalLabel">{{ game_name }}</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">×</span>
                             </button>
@@ -27,7 +27,7 @@
                         <div class="modal-body">
                             <p>Year: {{ game_info.year }}</p>
                             <p>System: {{ game_info.system }}</p>
-                            <!-- Add more game details here -->
+                            <p>Overview: {{ game_info.description}}</p>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
