--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/static/custom.css">
 
     <!-- Favicon -->
-    <link rel="icon" href="https://i.pinimg.com/originals/b0/9d/89/b09d8964573bee9b39a281a908a323fe.png"
+    <link rel="icon" href="/static/images/donut.png"
           type="image/png">
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -35,8 +35,8 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light simpsons-navbar">
     <a class="navbar-brand text-white" href="/">
-        <img src="https://i.pinimg.com/originals/b0/9d/89/b09d8964573bee9b39a281a908a323fe.png" width="40" height="40" class="d-inline-block align-top mr-0" alt="">
-        <img src="https://cdn.discordapp.com/attachments/1143351241930444833/1154231375751295026/SimpLogo.png" width="200" height="30" alt="">
+        <img src="static/images/donut.png" width="40" height="40" class="d-inline-block align-top mr-0" alt="">
+        <img src="static/images/SimpLogo.png" width="200" height="30" alt="">
     </a>
 
     <!-- Add a button for the mobile menu -->
