--- a/templates/emulator.html
+++ b/templates/emulator.html
@@ -19,6 +19,7 @@
                 EJS_color = "#0064ff";
                 EJS_pathtodata = "/static/emulatorjs/data";
                 EJS_gameUrl = rom;
+                EJS_DEBUG_XX = true;
             </script>
             <script src="static/emulatorjs/data/loader.js"></script>
         </div>
