--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>No Bullsh!t Simpsons - Watch the simpsons with no ADs or Trackers!</title>
+    <title>No Bullsh!t Simpsons - Watch The Simpsons with no ADs or Trackers!</title>
 
     <!-- Combined CSS files -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
