--- a/templates/video.html
+++ b/templates/video.html
@@ -17,8 +17,16 @@
         </div>
     </div>
 </div>
-<div class="commentbox" style="margin-top: 20px;"></div>
-<script src="https://unpkg.com/commentbox.io/dist/commentBox.min.js"></script>
-<script>commentBox('5736567322705920-proj')</script>
+
+<div class="container mt-4">
+    <div class="row">
+        <div class="col-lg-9 col-md-12 offset-lg-0">
+            <!-- Alert div with custom CSS for text size on mobile -->
+            <div class="alert alert-danger" style="font-size: 14px;">
+                <p class="mb-0">When you first click the play button, there might be one AD that pops open a new tab if you're not using an ad blocker. Just close it and click play again. It is beyond my control. Sorry for the inconvenience.</p>
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
