--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white" href="#">About</a>
+                <a class="nav-link text-white" href="/about">About</a>
             </li>
             <li class="nav-item">
                 <form class="form-inline my-2 my-lg-0 position-relative" action="/search" method="get">
